--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple repo to practice CI/CD pipelines",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint":"eslint ."
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/kunalt96/ci_cd_practice/issues"
   },
-  "homepage": "https://github.com/kunalt96/ci_cd_practice#readme"
+  "homepage": "https://github.com/kunalt96/ci_cd_practice#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.10.0"
+  }
 }
